--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homeview":"",
+  "homeview":"https://github.com/oDevelopsOs/workossama.github.io.git",
   "name": "allporj",
   "private": true,
   "version": "0.0.0",
