--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/oDevelopsOs/workossama.github.io.git",
+  "homepage":"https://github.com/oDevelopsOs/workossama.github.io.git/allporj",
   "name": "allporj",
   "private": true,
   "version": "0.0.0",
@@ -25,6 +25,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "allporj": "gh-deploy -d build"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
