--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://github.com/oDevelopsOs/workossama.github.io.git/allporj",
   "name": "allporj",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "allporj": "gh-deploy -d build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
