--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage":"https://github.com/oDevelopsOs/workossama.github.io.git/allporj",
-  "name": "allporj",
-  "private": true,
+  "homepage": "https://github.com/oDevelopsOs/work.github.io.git",
+  "name": "index",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "allporj": "gh-deploy -d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
