--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/oDevelopsOs/work.github.io/work.github.io",
+  "homepage": "https://github.com/oDevelopsOs/work.github.io/",
   "name": "index",
   "private": false,
   "version": "0.0.0",
